manifests/argo-workflows/argo-workflows-httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argo-workflows
  namespace: argo-workflows
spec:
  parentRefs:
    - name: lab-gateway
      namespace: default
  hostnames:
    - "argo-workflows.local"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: argo-workflows-server
          port: 2746
